<resources>
    <string name="app_name">Music Quiz App</string>
    <string name="play">Play</string>
    <string name="highscores">High Scores</string>
    <string name="curTop10">Current Top-10 Tracks</string>
    <string name="settings">Settings</string>
    <string name="mainmenu">Main Menu</string>
    <string name="playagain">Play Again</string>
    <string name="namehint">Name (1–15 characters)</string>
    <string name="save">Save</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="playlist">Playlist</string>
    <string name="first">1.</string>
    <string name="second">2.</string>
    <string name="third">3.</string>
    <string name="listenpreview">Listen preview (buffering can sometimes take a while).</string>
    <string name="nopreview">No preview available for this track.</string>
</resources>
