<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <Button
        android:text="@string/play"
        android:id="@+id/playID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clicked"/>

    <Button
        android:text="@string/highscores"
        android:id="@+id/scoresID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clicked"/>

    <Button
        android:text="@string/curTop10"
        android:id="@+id/top10ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clicked"/>

    <Button
        android:text="@string/settings"
        android:id="@+id/settingsID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clicked"/>

</LinearLayout>